--- a/index.html
+++ b/index.html
@@ -2,8 +2,22 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta content="yes" name="apple-mobile-web-app-capable">
+    <meta content="yes" name="apple-touch-fullscreen">
+    <meta content="telephone=no,email=no" name="format-detection">
+    <script src="http://g.tbcdn.cn/mtb/lib-flexible/0.3.4/??flexible_css.js,flexible.js"></script>
+    <!-- <link rel="stylesheet" href="//at.alicdn.com/t/font_b487gcqyl9xusor.css" /> -->
+    <script src="//at.alicdn.com/t/font_w05pjk5kkzlivn29.js"></script>
+    <style type="text/css">
+      .icon {
+         width: 1rem;
+         height: 1rem;
+         vertical-align: -0.15rem;
+         fill: currentColor;
+         overflow: hidden;
+      }
+    </style>
     <title>vue-instagram</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=0">
   </head>
   <body>
     <div id="app"></div>
