change icon & swiper

--- a/index.html
+++ b/index.html
@@ -6,17 +6,7 @@
     <meta content="yes" name="apple-touch-fullscreen">
     <meta content="telephone=no,email=no" name="format-detection">
     <script src="http://g.tbcdn.cn/mtb/lib-flexible/0.3.4/??flexible_css.js,flexible.js"></script>
-    <!-- <link rel="stylesheet" href="//at.alicdn.com/t/font_b487gcqyl9xusor.css" /> -->
-    <script src="//at.alicdn.com/t/font_wmntfd6azpeewmi.js"></script>
-    <style type="text/css">
-      .icon {
-         width: 1rem;
-         height: 1rem;
-         vertical-align: -0.15rem;
-         fill: currentColor;
-         overflow: hidden;
-      }
-    </style>
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_cf6grxzr36z2gldi.css" />
     <title>vue-instagram</title>
   </head>
   <body>
